--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "requests>=2.32.3",
     "packaging>=24.2",
     "paramiko>=3.5.0",
+    "smbprotocol>=1.15.0",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
