--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "packaging>=24.2",
     "paramiko>=3.5.0",
     "smbprotocol>=1.15.0",
+    "webdavclient3>=3.14.6",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
