--- a/ruff.toml
+++ b/ruff.toml
@@ -32,7 +32,7 @@ indent-width = 4
 target-version = "py312"
 
 [lint]
-select = ["E4", "E7", "E9", "F", "I"]
+select = ["E", "F", "UP", "B", "I", "SIM", "C90", "N"]
 fixable = ["ALL"]
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
